--- a/catalog.html
+++ b/catalog.html
@@ -63,92 +63,200 @@
             <div class="filter__info">
                 <p class="filter__title">Fashion</p>
                 <p class="filter__value"></p>
-                <span class="filter__symbol"><img src="img/catalog/filtermark.png" alt="mark" width="15" height="12"></span>
+                <span class="filter__symbol"><img src="img/catalog/filtermark.png" alt="mark" width="15"
+                        height="12"></span>
             </div>
             <div class="filters__dropdown">
-                <label class="filters__label"><input class="filters__input" type="radio" name="fashion" value="Not selected" checked>Not selected</label>
-                <label class="filters__label"><input class="filters__input" type="radio" name="fashion" value="Nail the 90s">Nail the 90s</label>
-                <label class="filters__label"><input class="filters__input" type="radio" name="fashion" value="Casual style">Casual style</label>
-                <label class="filters__label"><input class="filters__input" type="radio" name="fashion" value="New look">New look</label>
-                <label class="filters__label"><input class="filters__input" type="radio" name="fashion" value="Sport">Sport</label>
-                <label class="filters__label"><input class="filters__input" type="radio" name="fashion" value="Vintage">Vintage</label>
-                <label class="filters__label"><input class="filters__input" type="radio" name="fashion" value="Classical style">Classical style</label>
+                <label class="filters__label"><input class="filters__input" type="radio" name="fashion"
+                        value="Not selected" checked>Not selected</label>
+                <label class="filters__label"><input class="filters__input" type="radio" name="fashion"
+                        value="Nail the 90s">Nail the 90s</label>
+                <label class="filters__label"><input class="filters__input" type="radio" name="fashion"
+                        value="Casual style">Casual style</label>
+                <label class="filters__label"><input class="filters__input" type="radio" name="fashion"
+                        value="New look">New look</label>
+                <label class="filters__label"><input class="filters__input" type="radio" name="fashion"
+                        value="Sport">Sport</label>
+                <label class="filters__label"><input class="filters__input" type="radio" name="fashion"
+                        value="Vintage">Vintage</label>
+                <label class="filters__label"><input class="filters__input" type="radio" name="fashion"
+                        value="Classical style">Classical style</label>
             </div>
         </div>
         <div name="fashion" id="filters__type" class="filter__select">
             <div class="filter__info">
                 <p class="filter__title">Product type</p>
                 <p class="filter__value"></p>
-                <span class="filter__symbol"><img src="img/catalog/filtermark.png" alt="mark" width="15" height="12"></span>
+                <span class="filter__symbol"><img src="img/catalog/filtermark.png" alt="mark" width="15"
+                        height="12"></span>
             </div>
             <div class="filters__dropdown">
-                <label class="filters__label"><input class="filters__input" type="radio" name="type" value="Not selected" checked>Not selected</label>
-                <label class="filters__label"><input class="filters__input" type="radio" name="type" value="Coats & Jackets">Coats & Jackets</label>
-                <label class="filters__label"><input class="filters__input" type="radio" name="type" value="Dresses">Dresses</label>
-                <label class="filters__label"><input class="filters__input" type="radio" name="type" value="Jersey tops">Jersey tops</label>
+                <label class="filters__label"><input class="filters__input" type="radio" name="type"
+                        value="Not selected" checked>Not selected</label>
+                <label class="filters__label"><input class="filters__input" type="radio" name="type"
+                        value="Coats & Jackets">Coats & Jackets</label>
+                <label class="filters__label"><input class="filters__input" type="radio" name="type"
+                        value="Dresses">Dresses</label>
+                <label class="filters__label"><input class="filters__input" type="radio" name="type"
+                        value="Jersey tops">Jersey tops</label>
             </div>
         </div>
         <div name="fashion" id="filters__color" class="filter__select">
             <div class="filter__info">
                 <p class="filter__title">Color</p>
                 <p class="filter__value"></p>
-                <span class="filter__symbol"><img src="img/catalog/filtermark.png" alt="mark" width="15" height="12"></span>
+                <span class="filter__symbol"><img src="img/catalog/filtermark.png" alt="mark" width="15"
+                        height="12"></span>
             </div>
             <div class="filters__dropdown">
-                <label class="filters__label"><input class="filters__input" type="radio" name="color" value="Not selected" checked>Not selected</label>
-                <label class="filters__label"><input class="filters__input" type="radio" name="color" value="Black">Black</label>
-                <label class="filters__label"><input class="filters__input" type="radio" name="color" value="Blue">Blue</label>
-                <label class="filters__label"><input class="filters__input" type="radio" name="color" value="Red">Red</label>
-                <label class="filters__label"><input class="filters__input" type="radio" name="color" value="Green">Green</label>
-                <label class="filters__label"><input class="filters__input" type="radio" name="color" value="Golden">Golden</label>
-                <label class="filters__label"><input class="filters__input" type="radio" name="color" value="Classical style">Classical style</label>
+                <label class="filters__label"><input class="filters__input" type="radio" name="color"
+                        value="Not selected" checked>Not selected</label>
+                <label class="filters__label"><input class="filters__input" type="radio" name="color"
+                        value="Black">Black</label>
+                <label class="filters__label"><input class="filters__input" type="radio" name="color"
+                        value="Blue">Blue</label>
+                <label class="filters__label"><input class="filters__input" type="radio" name="color"
+                        value="Red">Red</label>
+                <label class="filters__label"><input class="filters__input" type="radio" name="color"
+                        value="Green">Green</label>
+                <label class="filters__label"><input class="filters__input" type="radio" name="color"
+                        value="Golden">Golden</label>
+                <label class="filters__label"><input class="filters__input" type="radio" name="color"
+                        value="Classical style">Classical style</label>
             </div>
         </div>
         <div name="fashion" id="filters__brand" class="filter__select">
             <div class="filter__info">
                 <p class="filter__title">Brand</p>
                 <p class="filter__value"></p>
-                <span class="filter__symbol"><img src="img/catalog/filtermark.png" alt="mark" width="15" height="12"></span>
+                <span class="filter__symbol"><img src="img/catalog/filtermark.png" alt="mark" width="15"
+                        height="12"></span>
             </div>
             <div class="filters__dropdown">
-                <label class="filters__label"><input class="filters__input" type="radio" name="brand" value="Not selected" checked>Not selected</label>
-                <label class="filters__label"><input class="filters__input" type="radio" name="brand" value="Chi Chi London">Chi Chi London</label>
-                <label class="filters__label"><input class="filters__input" type="radio" name="brand" value="Antipodium">Antipodium</label>
-                <label class="filters__label"><input class="filters__input" type="radio" name="brand" value="Adidas">Adidas</label>
-                <label class="filters__label"><input class="filters__input" type="radio" name="brand" value="New Balance">New Balance</label>
-                <label class="filters__label"><input class="filters__input" type="radio" name="brand" value="River island">River island</label>
+                <label class="filters__label"><input class="filters__input" type="radio" name="brand"
+                        value="Not selected" checked>Not selected</label>
+                <label class="filters__label"><input class="filters__input" type="radio" name="brand"
+                        value="Chi Chi London">Chi Chi London</label>
+                <label class="filters__label"><input class="filters__input" type="radio" name="brand"
+                        value="Antipodium">Antipodium</label>
+                <label class="filters__label"><input class="filters__input" type="radio" name="brand"
+                        value="Adidas">Adidas</label>
+                <label class="filters__label"><input class="filters__input" type="radio" name="brand"
+                        value="New Balance">New Balance</label>
+                <label class="filters__label"><input class="filters__input" type="radio" name="brand"
+                        value="River island">River island</label>
             </div>
         </div>
         <div name="fashion" id="filters__size" class="filter__select">
             <div class="filter__info">
                 <p class="filter__title">Size</p>
                 <p class="filter__value"></p>
-                <span class="filter__symbol"><img src="img/catalog/filtermark.png" alt="mark" width="15" height="12"></span>
+                <span class="filter__symbol"><img src="img/catalog/filtermark.png" alt="mark" width="15"
+                        height="12"></span>
             </div>
             <div class="filters__dropdown">
-                <label class="filters__label"><input class="filters__input" type="radio" name="size" value="Not selected" checked>Not selected</label>
-                <label class="filters__label"><input class="filters__input" type="radio" name="size" value="UK 2">UK 2</label>
-                <label class="filters__label"><input class="filters__input" type="radio" name="size" value="UK 18">UK 18</label>
-                <label class="filters__label"><input class="filters__input" type="radio" name="size" value="UK 18L">UK 18L</label>
-                <label class="filters__label"><input class="filters__input" type="radio" name="size" value="UK 20">UK 20</label>
-                <label class="filters__label"><input class="filters__input" type="radio" name="size" value="UK 20L">UK 20L</label>
-                <label class="filters__label"><input class="filters__input" type="radio" name="size" value="UK 20S">UK 20S</label>
-                <label class="filters__label"><input class="filters__input" type="radio" name="size" value="UK 22S">UK 22S</label>
-                <label class="filters__label"><input class="filters__input" type="radio" name="size" value="UK 22">UK 22</label>
+                <label class="filters__label"><input class="filters__input" type="radio" name="size"
+                        value="Not selected" checked>Not selected</label>
+                <label class="filters__label"><input class="filters__input" type="radio" name="size" value="UK 2">UK
+                    2</label>
+                <label class="filters__label"><input class="filters__input" type="radio" name="size" value="UK 18">UK
+                    18</label>
+                <label class="filters__label"><input class="filters__input" type="radio" name="size" value="UK 18L">UK
+                    18L</label>
+                <label class="filters__label"><input class="filters__input" type="radio" name="size" value="UK 20">UK
+                    20</label>
+                <label class="filters__label"><input class="filters__input" type="radio" name="size" value="UK 20L">UK
+                    20L</label>
+                <label class="filters__label"><input class="filters__input" type="radio" name="size" value="UK 20S">UK
+                    20S</label>
+                <label class="filters__label"><input class="filters__input" type="radio" name="size" value="UK 22S">UK
+                    22S</label>
+                <label class="filters__label"><input class="filters__input" type="radio" name="size" value="UK 22">UK
+                    22</label>
             </div>
         </div>
         <div name="fashion" id="filters__range" class="filter__select filter__select--range">
             <div class="filter__info">
                 <p class="filter__title">Price range</p>
                 <p class="filter__value"></p>
-                <span class="filter__symbol"><img src="img/catalog/filtermark.png" alt="mark" width="15" height="12"></span>
+                <span class="filter__symbol"><img src="img/catalog/filtermark.png" alt="mark" width="15"
+                        height="12"></span>
             </div>
-            <div class="filter__dropdown filter__dropdown--range" id = "filter__dropdown--range">
-                <span class="filter__mark filter__mark--first"><img src="img/catalog/pip_1.png" alt="mark" ></span>
-                <img src="img/catalog/line.png" alt="line" height = "3px">                
-                <span class="filter__mark filter__mark--second"><img src="img/catalog/pip_1.png" alt="mark" ></span>
+            <div class="filter__dropdown filter__dropdown--range" id="filter__dropdown--range">
+                <span class="filter__mark filter__mark--first"><img src="img/catalog/pip_1.png" alt="mark"></span>
+                <img src="img/catalog/line.png" alt="line" height="3px">
+                <span class="filter__mark filter__mark--second"><img src="img/catalog/pip_1.png" alt="mark"></span>
             </div>
         </div>
+    </section>
+    <section class="filters--mobile">
+        <div class="filters-bar">
+            <p class="filters-bar__selected"><span id="filters-bar__fashion"
+                    class="filters-bar__element">Fashion</span>, <span id="filters-bar__type"
+                    class="filters-bar__element">Product type</span>, <span id="filters-bar__color"
+                    class="filters-bar__element">Color</span>, <span id="filters-bar__brand"
+                    class="filters-bar__element">Brand</span>, <span id="filters-bar__size"
+                    class="filters-bar__element">Size</span>, <span id="filters-bar__range"
+                    class="filters-bar__element">Price range</span></p>
+            <div id="filter__burger" class="filter__burger">&#8801;</div>
+        </div>
+        <div class="filter-dropdown" id="filter-dropdown--mobile">
+            <ul class="filter-dropdown__list" data-type = "fashion">
+                <h3 class="filter-dropdown__heading">Fahion</h3>
+                <li class="filter-dropdown__element filter-dropdown__element--notselected">Not selected</li>
+                <li class="filter-dropdown__element">Nail the 90s</li>
+                <li class="filter-dropdown__element">Casual style</li>
+                <li class="filter-dropdown__element">New Look</li>
+                <li class="filter-dropdown__element">Sport</li>
+                <li class="filter-dropdown__element">Vintage</li>
+                <li class="filter-dropdown__element">Сlassical style</li>
+            </ul>
+            <ul class="filter-dropdown__list" data-type = "type">
+                <h3 class="filter-dropdown__heading">Product type</h3>
+                <li class="filter-dropdown__element filter-dropdown__element--notselected">Not selected</li>
+                <li class="filter-dropdown__element">Coats & Jackets</li>
+                <li class="filter-dropdown__element">Dresses</li>
+                <li class="filter-dropdown__element">Jersey Tops</li>
+            </ul>
+            <ul class="filter-dropdown__list" data-type = "color">
+                <h3 class="filter-dropdown__heading">Color</h3>
+                <li class="filter-dropdown__element filter-dropdown__element--notselected">Not selected</li>
+                <li class="filter-dropdown__element">Black</li>
+                <li class="filter-dropdown__element">Blue</li>
+                <li class="filter-dropdown__element">Red</li>
+                <li class="filter-dropdown__element">Green</li>
+                <li class="filter-dropdown__element">Golden</li>
+            </ul>
+            <ul class="filter-dropdown__list" data-type = "brand">
+                <h3 class="filter-dropdown__heading">Brand</h3>
+                <li class="filter-dropdown__element filter-dropdown__element--notselected">Not selected</li>
+                <li class="filter-dropdown__element">Chi Chi London</li>
+                <li class="filter-dropdown__element">Antipodium</li>
+                <li class="filter-dropdown__element">Adidas</li>
+                <li class="filter-dropdown__element">New Balance</li>
+                <li class="filter-dropdown__element">River Island</li>
+            </ul>
+            <ul class="filter-dropdown__list" data-type = "size">
+                <h3 class="filter-dropdown__heading">Size</h3>
+                <li class="filter-dropdown__element filter-dropdown__element--notselected">Not selected</li>
+                <li class="filter-dropdown__element">UK 2</li>
+                <li class="filter-dropdown__element">UK 18</li>
+                <li class="filter-dropdown__element">UK 18L</li>
+                <li class="filter-dropdown__element">UK 20</li>
+                <li class="filter-dropdown__element">UK 20L</li>
+                <li class="filter-dropdown__element">UK 20S</li>
+                <li class="filter-dropdown__element">UK 22S</li>
+                <li class="filter-dropdown__element">UK 22</li>
+            </ul>
+            <ul class="filter-dropdown__list" data-type = "range">
+                <h3 class="filter-dropdown__heading">Price range</h3>
+                <li class="filter-dropdown__element filter-dropdown__element--notselected">Not selected</li>
+                <li class="filter-dropdown__element">To £99</li>
+                <li class="filter-dropdown__element">£100-£299</li>
+                <li class="filter-dropdown__element">From £300</li>
+            </ul>
+        </div>
+
     </section>
     <div class="line__wrapper"></div>
     <section class="catalog">
@@ -369,10 +477,12 @@
                 <li class="footer__share__list__element"><a href="#">Site map</a></li>
             </ul>
         </section>
-        <script src="data/catalog.js"></script>
-        <script src="data/best-offer.js"></script>
-        <script src="js/start.js"></script>
+
     </footer>
+    <script src="data/catalog.js"></script>
+    <script src="data/best-offer.js"></script>
+    <script src="js/start.js"></script>
+    <script src="js/filter.js"></script>
 </body>
 
 </html>
