--- a/shopping-bag.html
+++ b/shopping-bag.html
@@ -78,7 +78,7 @@
                     <div class="bag-content__wrap">
                         <p class="bag-content__text">Color: Philipa wash</p>
                         <p class="bag-content__text">Size: UK 17</p>
-                        <p class="bag-content__text">Quantity: <span class="bag-content__icon bag-content__icon--minus">&#06;</span><span
+                        <p class="bag-content__text">Quantity: <span class="bag-content__icon bag-content__icon--minus">-</span><span
                                 class="bag-content__quantity">1</span><span class="bag-content__icon bag-content__icon--plus">+</span></p>
                     </div>
                     <button class="bag-content__remove">Remove item</button>
@@ -97,7 +97,7 @@
                     <div class="bag-content__wrap">
                         <p class="bag-content__text">Color: Blue</p>
                         <p class="bag-content__text">Size: UK 18</p>
-                        <p class="bag-content__text">Quantity: <span class="bag-content__icon bag-content__icon--minus">&#06;</span><span
+                        <p class="bag-content__text">Quantity: <span class="bag-content__icon bag-content__icon--minus">-</span><span
                                 class="bag-content__quantity">1</span><span class="bag-content__icon bag-content__icon--plus">+</span></p>
                     </div>
                     <button class="bag-content__remove">Remove item</button>
@@ -116,7 +116,7 @@
                     <div class="bag-content__wrap">
                         <p class="bag-content__text">Color: Black</p>
                         <p class="bag-content__text">Size: UK 18</p>
-                        <p class="bag-content__text">Quantity: <span class="bag-content__icon bag-content__icon--minus">&#06;</span><span
+                        <p class="bag-content__text">Quantity: <span class="bag-content__icon bag-content__icon--minus">-</span><span
                                 class="bag-content__quantity">1</span><span class="bag-content__icon bag-content__icon--plus">+</span></p>
                     </div>
                     <button class="bag-content__remove">Remove item</button>
@@ -136,7 +136,7 @@
                     <div class="bag-content__wrap">
                         <p class="bag-content__text">Color: Green</p>
                         <p class="bag-content__text">Size: UK 19</p>
-                        <p class="bag-content__text">Quantity: <span class="bag-content__icon bag-content__icon--minus">&#06;</span><span
+                        <p class="bag-content__text">Quantity: <span class="bag-content__icon bag-content__icon--minus">-</span><span
                                 class="bag-content__quantity">1</span><span class="bag-content__icon bag-content__icon--plus">+</span></p>
                     </div>
                     <button class="bag-content__remove">Remove item</button>
