--- a/catalog.html
+++ b/catalog.html
@@ -121,8 +121,6 @@
                         value="Green">Green</label>
                 <label class="filters__label"><input class="filters__input" type="radio" name="color"
                         value="Golden">Golden</label>
-                <label class="filters__label"><input class="filters__input" type="radio" name="color"
-                        value="Classical style">Classical style</label>
             </div>
         </div>
         <div name="fashion" id="filters__brand" class="filter__select">
@@ -190,7 +188,7 @@
         </div>
     </section>
     <section class="filters--mobile">
-        <div class="filters-bar">
+        <div class="filters-bar" id = "filters-bar">
             <p class="filters-bar__selected"><span id="filters-bar__fashion"
                     class="filters-bar__element">Fashion</span>, <span id="filters-bar__type"
                     class="filters-bar__element">Product type</span>, <span id="filters-bar__color"
