best offer slider

--- a/start.html
+++ b/start.html
@@ -75,41 +75,41 @@
         <p class="bestOffer__text">This offer is valid in-store and online. Prices displayed reflect this additional
             discount. This offer ends at 11:59 GMT on March 1st 2019</p>
         <div class="bestOffer__content">
-            <div class="bestOffer__content__wrapper">
-                <img class="bestOffer__content__angle" alt="angle-up" src="img/start/1300/angle-up.png">
+            <div class="bestOffer__content__wrapper bestOffer__content__wrapper--first">
+                <img class="bestOffer__content__angle bestOffer__content__angle-up" alt="angle-up" src="img/start/1300/angle-up.png">
                 <a href="item.html">
-                    <div class="bestOffer__content__image__wrapper bestOffer__content__image__wrapper--first">
+                    <div class="bestOffer__content__image__wrapper bestOffer__content__image__wrapper--first" id = "bestOffer__content__image__wrapper--first">
                         <span class="bestOffer__content__image__new">NEW</span>
                     </div>
                 </a>
                 <h3 class="bestOffer__content__title">Only Skinny Jeans</h3>
                 <p class="bestOffer__content__price">£65.50</p>
-                <img class="bestOffer__content__angle" alt="angle-down" src="img/start/1300/angle-down.png">
+                <img class="bestOffer__content__angle bestOffer__content__angle-down" alt="angle-down" src="img/start/1300/angle-down.png">
             </div>
             <span class="bestOffer__content__symbol">+</span>
-            <div class="bestOffer__content__wrapper">
-                <img class="bestOffer__content__angle" alt="angle-up" src="img/start/1300/angle-up.png">
+            <div class="bestOffer__content__wrapper bestOffer__content__wrapper--second">
+                <img class="bestOffer__content__angle bestOffer__content__angle-up" alt="angle-up" src="img/start/1300/angle-up.png">
                 <a href="item.html">
-                    <div class="bestOffer__content__image__wrapper  bestOffer__content__image__wrapper--second">
+                    <div class="bestOffer__content__image__wrapper  bestOffer__content__image__wrapper--second" id = "bestOffer__content__image__wrapper--second">
 
                     </div>
                 </a>
                 <h3 class="bestOffer__content__title">Levi’s Jeans for women</h3>
                 <p class="bestOffer__content__price">£95.50</p>
-                <img class="bestOffer__content__angle" alt="angle-down" src="img/start/1300/angle-down.png">
+                <img class="bestOffer__content__angle bestOffer__content__angle-down" alt="angle-down" src="img/start/1300/angle-down.png">
             </div>
             <span class="bestOffer__content__symbol">=</span>
             <div class="bestOffer__content__total__wrapper">
-                <p class="bestOffer__content__total__old">£161.00
+                <p class="bestOffer__content__total__old" id="bestOffer__content__total__old">£161.00
                     <img class="bestOffer__content__total__old__strikeout" src="img/start/1300/strikeout.png"
                         alt="strikeout">
                 </p>
-                <p class="bestOffer__content__total__new">£146.00</p>
-                <a href="shopping-bag.html"><button class="bestOffer__content__total__bag-button">Add to
+                <p class="bestOffer__content__total__new" id="bestOffer__content__total__new">£146.00</p>
+                <a href="shopping-bag.html"><button class="bestOffer__content__total__bag-button" id = "bestOffer__content__total__bag-button">Add to
                         bag</button></a>
             </div>
         </div>
-        <a href="shopping-bag.html"><button class="bestOffer__bag-button">Add to bag</button></a>
+        <a href="shopping-bag.html" class="bestOffer__bag-link"><button class="bestOffer__bag-button" id = "bestOffer__bag-button">Add to bag</button></a>
     </section>
     <div class="line__wrapper"></div>
 
@@ -231,6 +231,7 @@
     <script src="data/catalog.js"></script>
     <script src="data/best-offer.js"></script>
     <script src="js/start.js"></script>
+    <script src="js/best-offer.js"></script>
 </body>
 
 </html>
